#14 [2.5h] Allow for real time device updates using Websocket